samples/_failures_safe/1761551500_4c77ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e0e4d41a.c: In function ‘main’:
./samples/SAFE/__tmp_e0e4d41a.c:177:12: error: missing terminating " character
  177 |     printf("-----+------------
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e0e4d41a.c:177:5: error: expected expression at end of input
  177 |     printf("-----+------------
      |     ^~~~~~
./samples/SAFE/__tmp_e0e4d41a.c:177:5: error: expected declaration or statement at end of input
